# ValhallaEngine

./: LICENSE  README  README.md
Valhalla Engine Editor.xcodeproj/: project.pbxproj
Valhalla Engine Editor.xcodeproj/project.xcworkspace/xcuserdata/andrewskatzes.xcuserdatad/: UserInterfaceState.xcuserstate
Valhalla Engine Editor.xcodeproj/xcshareddata/xcschemes/: Valhalla Engine Editor.xcscheme
Valhalla Engine Editor.xcodeproj/xcuserdata/andrewskatzes.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Valhalla Engine Editor.xcodeproj/xcuserdata/andrewskatzes.xcuserdatad/xcschemes/: xcschememanagement.plist
ValhallaEngine/: CMakeLists.txt  main.cpp  main.h  main.mm  v_datapackage.cpp  v_platform.mm  v_types.hpp
ValhallaEngine/Engine/: CMakeLists.txt  v_datapackage.cpp  v_metalbackend.mm  v_platform.mm
ValhallaEngine/Engine/Editor/: CMakeLists.txt  v_editor.cpp
ValhallaEngine/Engine/Editor/headers/: v_editor.hpp
ValhallaEngine/Engine/GraphicBackend/Metal/: CMakeLists.txt  v_metalbackend.mm
ValhallaEngine/Engine/GraphicBackend/Metal/headers/: v_metalbackend.h
ValhallaEngine/Engine/GraphicBackend/Vulkan/: v_vulkanbackend.cpp
ValhallaEngine/Engine/GraphicBackend/Vulkan/headers/: v_vulkanbackend.hpp
ValhallaEngine/Engine/WindowCore/Mac/: CMakeLists.txt  VMac.mm
ValhallaEngine/Engine/WindowCore/Mac/headers/: VMac.h
ValhallaEngine/Engine/headers/: v_datapackage.hpp  v_metalbackend.h  v_platform.h
ValhallaEngine/Shaders/Metal/: Scene.metal  ValhallaShaderTypes.h
ValhallaEngine/Shaders/Metal/PostProces/: ChromaShift.metal  DownsampleBlur.metal  DualKawaseBlur.metal  Ghosts.metal  Glare.metal  HaloFlare.metal  Mix.metal  Rescale.metal  ScreenPass.metal
ValhallaEngine/Shaders/Vulkan/: ChromaShift.frag
ValhallaEngine/assets/: VEditorAssets.qrc  ValhallaEditor.ui  ValhallaEngine.icns
ValhallaEngine/assets/Assets.xcassets/Appicon.appiconset/: Contents.json
